Add aliases to devfile components

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 apiVersion: 1.0.0
 metadata:
-  name: django-example-33be3
+  generateName: django-example-
 projects:
   - name: old-django-canary
     source:
@@ -9,12 +9,22 @@ projects:
 components:
   - id: ms-python/python/latest
     type: chePlugin
+    alias: vscode-python
   - id: eclipse/che-machine-exec-plugin/latest
     type: chePlugin
+    alias: che-exec
   - id: redhat/vscode-openshift-connector/latest
     type: chePlugin
+    alias: vscode-oc
   - id: ms-vscode/vscode-github-pullrequest/latest
     type: chePlugin
+    alias: vscode-gitpr
+  - id: vscode/typescript-language-features/latest
+    type: chePlugin
+    alias: vscode-ts
+  - id: redhat/vscode-xml/latest
+    type: chePlugin
+    alias: vscode-xml
   - mountSources: true
     endpoints:
       - name: django
@@ -23,8 +33,8 @@ components:
     type: dockerimage
     volumes:
       - name: venv
-        containerPath: '/home/user/.venv'
-    alias: python
+        containerPath: /home/user/.venv
+    alias: django-svc
     image: 'docker.io/jheinnic/che-python-2.7:afdcd09'
   - mountSources: false
     endpoints:
@@ -35,67 +45,41 @@ components:
     volumes:
       - name: postgres-db
         containerPath: /var/lib/postgresql
-    alias: postgres
+    alias: postgres-svc
     image: 'postgres:11.4-alpine'
-  - id: vscode/typescript-language-features/latest
-    type: chePlugin
-  - id: redhat/vscode-xml/latest
-    type: chePlugin
   - id: redhat/vscode-yaml/latest
     type: chePlugin
 commands:
   - name: install dependencies
     actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/'
-        type: exec
-        command: '. /home/user/.venv/bin/activate && pip install -r requirements.txt && pip install ptvsd'
-        component: python
-  - name: migrate
-    actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
-        type: exec
-        command: '. /home/user/.venv/bin/activate && python manage.py migrate'
-        component: python
-  - name: run server
-    actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
-        type: exec
-        command: '. /home/user/.venv/bin/activate && export DEBUG_MODE=False && python manage.py runserver 0.0.0.0:7000'
-        component: python
-  - name: run server in debug mode
-    actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
-        type: exec
-        command: '. /home/user/.venv/bin/activate &&  export DEBUG_MODE=True && python manage.py runserver 0.0.0.0:7000 --noreload --nothreading'
-        component: python
-  - name: Alt install dependencies
-    actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
+      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary/OldCanary'
         type: exec
         command: '. ${HOME}/.venv/bin/activate && pip install -r requirements.txt && pip install ptvsd'
-        component: vscode_python
-  - name: Alt migrate
+        component: django-svc
+  - name: migrate
     actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
+      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary/OldCanary'
         type: exec
         command: '. ${HOME}/.venv/bin/activate && python manage.py migrate'
-        component: vscode_python
-  - name: Alt run server
+        component: django-svc
+  - name: run server
     actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
+      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary/OldCanary'
         type: exec
         command: '. ${HOME}/.venv/bin/activate && export DEBUG_MODE=False && python manage.py runserver 0.0.0.0:7000'
-        component: vscode_python
-  - name: Alt run server in debug mode
+        component: django-svc
+  - name: run server in debug mode
     actions:
-      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary'
+      - workdir: '${CHE_PROJECTS_ROOT}/old-django-canary/OldCanary'
         type: exec
         command: '. ${HOME}/.venv/bin/activate &&  export DEBUG_MODE=True && python manage.py runserver 0.0.0.0:7000 --noreload --nothreading'
-        component: vscode_python
+        component: django-svc
   - name: debug
     actions:
       - referenceContent: |
-          { "version": "0.2.0", "configurations": [
+          { 
+            "version": "0.2.0", 
+            "configurations": [
             {
               "name": "Python: Remote Attach",
               "type": "python",
@@ -104,11 +88,12 @@ commands:
               "host": "0.0.0.0",
               "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}",
-                    "remoteRoot": "${workspaceFolder}"
+                    "localRoot": "${workspaceFolder}/OldCanary",
+                    "remoteRoot": "${workspaceFolder}/OldCanary"
                 }
               ]
-            }]
-          }
-        type: vscode-launch
+            }
+          ]
+          "type": "vscode-launch"
+        }
 
