Fixing nesting of final 'type' property

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -90,8 +90,7 @@ commands:
                     "remoteRoot": "${workspaceFolder}/OldCanary"
                 }
               ]
-            }
-          ],
-          "type": "vscode-launch"
-        }
+            }]
+          }
+        type: "vscode-launch"
 
